@@ -1,3 +1,8 @@
+2012-08-08  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* poe.el (next-command-event): Fix that Emacs 21 and later were
+	treated as 'Emacs 19, 20.1 and 20.2'.
+
 2012-07-28  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mcs-e20.el (charsets-mime-charset-alist): Do not use
